--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,7 +13,6 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     permissions:
       contents: read
 
@@ -26,14 +25,20 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-          cache: 'maven'
 
-      - name: Build with Maven
-        run: mvn -B clean package
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Build Shadow Jar
+        run: |
+          chmod +x gradlew
+          ./gradlew clean shadowJar
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: Plugin-Jar
-          path: target/*.jar
+          path: |
+            build/libs/*.jar
+            target/*.jar
           if-no-files-found: error
